update console output word